--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -63,9 +63,9 @@
         <div *ngFor="let profile of profiles; index as i" class="card mt-5 mb-5 text-center">
             <img class="card-img-top img-fluid" src={{profile.image}} alt="Card image">
             <div class="card-body p-1">
-                <h5 class="text-center">{{ profile.name }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
-                <h6 class="text-center">DOB - <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
-                <h6 class="text-center">Star - <small *ngIf="profile.star; else elseNil">{{ profile.star}}</small></h6>
+                <h5 class="text-center">{{ profile.name | titlecase }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
+                <h6 class="text-center">DOB:  <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
+                <h6 class="text-center">Star: <small *ngIf="profile.star; else elseNil">{{ profile.star | titlecase }}</small></h6>
                 <ng-template #elseNil><small>Nil</small></ng-template>
             </div>
             <div class="card-footer p-2 pr-3 text-right"><a [routerLink]="['/profiledetail', profile.id]">View profile</a></div>
@@ -78,9 +78,9 @@
         <div *ngFor="let profile of filteredProfiles; index as i" class="card mt-5 mb-5 text-center">
             <img class="card-img-top img-fluid" src={{profile.image}} alt="Card image">
             <div class="card-body p-1">
-                <h5 class="text-center">{{ profile.name }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
-                <h6 class="text-center">DOB - <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
-                <h6 class="text-center">Star - <small *ngIf="profile.star; else elseNil">{{ profile.star}}</small></h6>
+                <h5 class="text-center">{{ profile.name | titlecase }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
+                <h6 class="text-center">DOB: <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
+                <h6 class="text-center">Star: <small *ngIf="profile.star; else elseNil">{{ profile.star | titlecase }}</small></h6>
                 <ng-template #elseNil><small>Nil</small></ng-template>
             </div>
             <div class="card-footer p-2 pr-3 text-right"><a [routerLink]="['/profiledetail', profile.id]">View profile</a></div>
